force-app/main/default/objects/Beth_Call_Summary__c/Beth_Call_Summary__c.object-meta.xml
<CustomObject>
    <label>Beth Call Summary</label>
    <nameField>
        <displayFormat>BCS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beth Call Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>