force-app/main/default/objects/Beth_Call_Summary__c/fields/Beth_Intent_Code__c.field-meta.xml
<CustomField>
    <fullName>Beth_Intent_Code__c</fullName>
    <label>Beth Intent Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPT_MANAGE</fullName>
            </value>
            <value>
                <fullName>APPT_SCHEDULING</fullName>
            </value>
            <value>
                <fullName>CLINIC_TRANSFER</fullName>
            </value>
            <value>
                <fullName>DIRECTIONS</fullName>
            </value>
            <value>
                <fullName>ESCALATED_OTHER</fullName>
            </value>
            <value>
                <fullName>INFO_KB_SERVED</fullName>
            </value>
            <value>
                <fullName>LANG_SPANISH_ROUTE</fullName>
            </value>
            <value>
                <fullName>NOANSWER_FALLBACK</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>