force-app/main/default/objects/Beth_Call_Summary__c/fields/Beth_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Beth_Session_Id__c</fullName>
    <label>Beth Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>