force-app/main/default/objects/Beth_Call_Summary__c/fields/Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_DateTime__c</fullName>
    <label>Call DateTime</label>
    <type>DateTime</type>
</CustomField>