force-app/main/default/objects/Beth_Call_Summary__c/fields/Call_GUID__c.field-meta.xml
<CustomField>
    <fullName>Call_GUID__c</fullName>
    <description>Vonage call guid when routed to a human agent</description>
    <inlineHelpText>Vonage call guid when routed to a human agent</inlineHelpText>
    <label>Call GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>