force-app/main/default/objects/Beth_Call_Summary__c/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <label>Caller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>