force-app/main/default/objects/Beth_Call_Summary__c/fields/CLID__c.field-meta.xml
<CustomField>
    <fullName>CLID__c</fullName>
    <label>CLID</label>
    <type>Phone</type>
</CustomField>