force-app/main/default/objects/Beth_Call_Summary__c/fields/Intent_Description__c.field-meta.xml
<CustomField>
    <fullName>Intent_Description__c</fullName>
    <label>Intent Description</label>
    <type>TextArea</type>
</CustomField>