force-app/main/default/objects/Beth_Call_Summary__c/fields/Interaction_Link__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Link__c</fullName>
    <formula>IF(
    ISBLANK(Interaction_Id__c),
    &quot;No Interaction Id&quot;,
    HYPERLINK(
        &quot;https://agents.prod-uswest01.observe.ai/interactions/&quot; &amp; Interaction_Id__c,
        &quot;View Interaction&quot;,
        &quot;_blank&quot;
    )
)</formula>
    <label>Interaction Link</label>
    <type>Text</type>
</CustomField>