force-app/main/default/objects/Beth_Call_Summary__c/fields/Normalized_CLID__c.field-meta.xml
<CustomField>
    <fullName>Normalized_CLID__c</fullName>
    <formula>IF(
    LEN(
        IF(BEGINS(CLID__c, &quot;+1&quot;),
            RIGHT(CLID__c, LEN(CLID__c) - 2),
            CLID__c
        )
    ) = 10,
    RIGHT(
        CLID__c,
        LEN(CLID__c) - IF(BEGINS(CLID__c, &quot;+1&quot;), 2, 0)
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Normalized CLID</label>
    <type>Text</type>
</CustomField>