force-app/main/default/objects/Beth_Call_Summary__c/fields/PracticeID__c.field-meta.xml
<CustomField>
    <fullName>PracticeID__c</fullName>
    <formula>Transfer_to_Practice_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PracticeID</label>
    <type>Text</type>
</CustomField>