force-app/main/default/objects/Beth_Call_Summary__c/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Primary Reason</label>
    <type>TextArea</type>
</CustomField>