force-app/main/default/objects/Beth_Call_Summary__c/fields/Secondary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reason__c</fullName>
    <label>Secondary Reason</label>
    <type>TextArea</type>
</CustomField>