force-app/main/default/objects/Beth_Call_Summary__c/fields/Transfer_to_Practice_Id__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Practice_Id__c</fullName>
    <label>Transfer to Practice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>