force-app/main/default/objects/Beth_Call_Summary__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CLID__c</columns>
    <columns>Call_GUID__c</columns>
    <columns>Beth_Intent_Code__c</columns>
    <columns>Escalated__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Beth Call Summaries</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>